--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -9,20 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Install flake8
+      - name: "Install flake8"
         run: |
           python -m pip install --upgrade pip
           pip install flake8==6.0.0
-      - name: Lint (non-blocking)
+      - name: "Lint (non-blocking)"
         continue-on-error: true
         run: python -m flake8 backend/
 
   build_and_push_backend:
-    name: Build & Push Backend
+    name: "Build & Push Backend"
     runs-on: ubuntu-latest
     needs: [tests]
     steps:
@@ -39,7 +39,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   build_and_push_frontend:
-    name: Build & Push Frontend
+    name: "Build & Push Frontend"
     runs-on: ubuntu-latest
     needs: [tests]
     steps:
@@ -95,6 +95,48 @@ jobs:
                 git reset --hard origin/main
                 git clean -fd
               fi
+            fi
+
+      - name: "SSH: ensure .env from secrets"
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            set -euo pipefail
+            cd /home/${{ secrets.USER }}/foodgram
+            if [ -f ".env" ]; then
+              echo ".env uzhe est, propuskaem"
+            else
+              cat > .env <<EOF
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=${{ secrets.POSTGRES_DB }}
+POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+DB_HOST=db
+DB_PORT=5432
+
+SECRET_KEY=${{ secrets.SECRET_KEY }}
+DEBUG=False
+ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}
+CSRF_TRUSTED_ORIGINS=${{ secrets.CSRF_TRUSTED_ORIGINS }}
+
+TIME_ZONE=Europe/Moscow
+APPEND_SLASH=True
+USE_X_FORWARDED_PROTO=True
+USE_X_FORWARDED_HOST=True
+SECURE_SSL_REDIRECT=True
+SESSION_COOKIE_SECURE=True
+CSRF_COOKIE_SECURE=True
+SESSION_COOKIE_SAMESITE=Lax
+CSRF_COOKIE_SAMESITE=Lax
+DISABLE_BROWSABLE_API=True
+DATA_UPLOAD_MAX_MEMORY_SIZE=26214400
+EOF
+              chmod 600 .env
             fi
 
       - name: "SSH: deploy with docker compose v2"
