--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,52 +2,40 @@ server {
     listen 80;
     server_name _;
 
+    # Корень — собранный фронтенд (CRA build)
     root /usr/share/nginx/html;
     index index.html;
 
-    # === Фронтовые статические файлы из билда CRA ===
+    # Кэш для фронтовой статики (быстро и долго)
     location ^~ /static/js/ {
-        root /usr/share/nginx/html;
         try_files $uri =404;
         access_log off;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
     location ^~ /static/css/ {
-        root /usr/share/nginx/html;
         try_files $uri =404;
         access_log off;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
     location ^~ /static/media/ {
-        root /usr/share/nginx/html;
         try_files $uri =404;
         access_log off;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    # === Бэкенд-статик и медиа (Django) ===
-    location /static/ {
-        alias /static/;
-        access_log off;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-    }
+    # Медиа и статика бека — отдаем из примонтированных томов
     location /media/ {
         alias /media/;
-        access_log off;
-        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header Cache-Control "public, max-age=3600";
+        autoindex off;
+    }
+    location /backend-static/ {
+        alias /static/;
+        add_header Cache-Control "public, max-age=3600";
+        autoindex off;
     }
 
-    # === Админка Django ===
-    location /admin/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        proxy_pass http://backend:8000;
-    }
-
-    # === API на Gunicorn ===
+    # Проксирование API на бекенд (Gunicorn в контейнере backend:8000)
     location /api/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -57,7 +45,7 @@ server {
         proxy_pass http://backend:8000;
     }
 
-    # Короткие ссылки
+    # Короткие ссылки /s/<code> — тоже на бекенд
     location /s/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -73,7 +61,7 @@ server {
         return 200 "ok";
     }
 
-    # SPA fallback
+    # SPA fallback: все неизвестные пути — на index.html
     location / {
         try_files $uri $uri/ /index.html;
     }
