--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,60 +1,79 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:13-alpine
-    container_name: foodgram-db
+    restart: always
     environment:
-      POSTGRES_DB: ${DB_NAME:-foodgram}
-      POSTGRES_USER: ${POSTGRES_USER:-foodgram}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-foodgram}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - pg_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
-    restart: always
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
-    image: pyryanova/foodgram_backend:latest
-    container_name: foodgram-back
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
     env_file:
-      - .env
-    environment:
-      DB_HOST: db
-      DB_PORT: "5432"
-      STATIC_ROOT: /app/static
-      MEDIA_ROOT: /app/media
+      - ../backend/.env
+    command: >
+      bash -lc "
+        python manage.py collectstatic --noinput &&
+        python manage.py migrate --noinput &&
+        gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 60
+      "
     depends_on:
       db:
         condition: service_healthy
     volumes:
-      - static_data:/app/static
-      - media_data:/app/media
-    expose:
-      - "8000"
-    restart: always
+      - backend_static:/static
+      - backend_media:/media
+
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    restart: "no"
+    volumes:
+      - frontend_build:/app/build
     command: >
-      sh -c "
-      python manage.py migrate &&
-      python manage.py collectstatic --noinput &&
-      gunicorn --bind 0.0.0.0:8000 foodgram.wsgi
+      bash -lc "
+        npm ci &&
+        npm run build &&
+        cp -r build/* /app/build/
       "
 
   nginx:
-    image: pyryanova/foodgram_gateway:latest
-    container_name: foodgram-nginx
+    image: nginx:1.25-alpine
+    restart: always
     depends_on:
       - backend
+      - frontend
     ports:
-      - "127.0.0.1:8081:80"
+      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - static_data:/static:ro
-      - media_data:/media:ro
-    restart: always
+      - frontend_build:/usr/share/nginx/html:rw
+      - backend_static:/static:ro
+      - backend_media:/media:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/lib/letsencrypt:/var/lib/letsencrypt:ro
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost/nginx-health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pg_data:
-  static_data:
-  media_data:
+  backend_static:
+  backend_media:
+  frontend_build:
