--- a/nginx.conf
+++ b/nginx.conf
@@ -1,68 +1,50 @@
 server {
     listen 80;
-    server_name _;
+    server_name foodgram-practicum.hopto.org 89.169.182.254;
 
-    # Корень — собранный фронтенд (CRA build)
-    root /usr/share/nginx/html;
-    index index.html;
+    server_tokens off;
+    client_max_body_size 20M;
 
-    # Кэш для фронтовой статики (быстро и долго)
-    location ^~ /static/js/ {
-        try_files $uri =404;
-        access_log off;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-    }
-    location ^~ /static/css/ {
-        try_files $uri =404;
-        access_log off;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-    }
-    location ^~ /static/media/ {
-        try_files $uri =404;
-        access_log off;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-    }
-
-    # Медиа и статика бека — отдаем из примонтированных томов
     location /media/ {
-        alias /media/;
-        add_header Cache-Control "public, max-age=3600";
-        autoindex off;
-    }
-    location /backend-static/ {
-        alias /static/;
-        add_header Cache-Control "public, max-age=3600";
-        autoindex off;
+        root /var/html;
     }
 
-    # Проксирование API на бекенд (Gunicorn в контейнере backend:8000)
+    location /static/admin/ {
+        root /var/html;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
+
     location /api/ {
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
     }
 
-    # Короткие ссылки /s/<code> — тоже на бекенд
-    location /s/ {
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri /index.html;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        proxy_pass http://backend:8000;
     }
 
-    # Healthcheck
-    location = /nginx-health {
-        add_header Content-Type text/plain;
-        return 200 "ok";
-    }
-
-    # SPA fallback: все неизвестные пути — на index.html
-    location / {
-        try_files $uri $uri/ /index.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
