--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -18,28 +18,26 @@ services:
       retries: 5
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: pyryanova/foodgram_backend:latest
     restart: always
     env_file: ./.env
-    command: >
-      bash -lc "
-        python manage.py collectstatic --noinput &&
-        python manage.py migrate --noinput &&
-        gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 60
-      "
     depends_on:
       db:
         condition: service_healthy
     volumes:
       - backend_static:/static
       - backend_media:/media
+    command: >
+      bash -lc "
+        python manage.py migrate --noinput &&
+        python manage.py collectstatic --noinput &&
+        gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 60
+      "
+    expose:
+      - "8000"
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: pyryanova/foodgram_frontend:latest
     restart: "no"
     env_file: ./.env
     volumes:
@@ -61,14 +59,14 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - frontend_build:/usr/share/nginx/html:rw
-      - backend_static:/static:ro
-      - backend_media:/media:ro
+      - backend_static:/var/html/static:ro
+      - backend_media:/var/html/media:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /var/lib/letsencrypt:/var/lib/letsencrypt:ro
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost/nginx-health || exit 1"]
+      test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
