--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,16 +9,16 @@ server {
         root /var/html;
     }
 
-    location /static/admin/ {
-        root /var/html;
-    }
-
-    location /static/rest_framework/ {
+    location /static/ {
         root /var/html;
     }
 
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/docs/ {
@@ -30,6 +30,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme; 
         proxy_pass http://backend:8000;
     }
 
@@ -37,14 +40,8 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri /index.html;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+    location = /50x.html { root /usr/share/nginx/html; }
 }
