--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -160,3 +160,15 @@ jobs:
             sudo docker compose -p infra -f infra/docker-compose.production.yml exec -T backend python manage.py load_ingredients || true
             sudo docker compose -p infra -f infra/docker-compose.production.yml exec -T backend python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
             sudo docker compose -p infra -f infra/docker-compose.production.yml exec -T backend python manage.py import_tags || true
+
+  notify:
+    name: Telegram Notification
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Send Telegram message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: "Foodgram: деплой успешно выполнен!"
