--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -59,7 +59,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - frontend_build:/usr/share/nginx/html:rw
       - backend_static:/var/html/static:ro
       - backend_media:/var/html/media:ro
