--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,11 @@
-FROM node:21.7.1-alpine
+FROM node:21-alpine AS build
 WORKDIR /app
-
 COPY package*.json ./
-RUN if [ -f package-lock.json ]; then \
-      npm ci --no-audit --no-fund --legacy-peer-deps; \
-    else \
-      npm install --legacy-peer-deps; \
-    fi
-
-COPY . ./
+RUN npm ci
+COPY . .
 RUN npm run build
-
-CMD ["sh", "-c", "cp -r build result_build"]
+    
+FROM alpine:3.19
+WORKDIR /opt
+COPY --from=build /app/build /opt/build
+CMD ["sh", "-c", "cp -r /opt/build/* /app/build/ 2>/dev/null || true; tail -f /dev/null"]
