--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,13 @@
-FROM node:21-alpine AS build
+FROM node:20-alpine AS build
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci
+
+COPY package.json package-lock.json ./
+
+RUN npm ci --no-audit --no-fund || npm install --no-audit --no-fund
+
 COPY . .
 RUN npm run build
-    
+
 FROM alpine:3.19
 WORKDIR /opt
 COPY --from=build /app/build /opt/build
