--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,16 @@
-FROM node:20-alpine AS build
+# === build ===
+FROM node:18-alpine AS build
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+RUN corepack enable && corepack prepare yarn@1.22.22 --activate
 
-RUN npm ci --no-audit --no-fund || npm install --no-audit --no-fund
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile || yarn install
 
 COPY . .
-RUN npm run build
+RUN yarn build
 
 FROM alpine:3.19
 WORKDIR /opt
 COPY --from=build /app/build /opt/build
-CMD ["sh", "-c", "cp -r /opt/build/* /app/build/ 2>/dev/null || true; tail -f /dev/null"]
+CMD ["sh","-lc","cp -r /opt/build/* /app/build/ 2>/dev/null || true; tail -f /dev/null"]
