--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,44 +1,58 @@
 server {
     listen 80;
     server_name foodgram-practicum.hopto.org 89.169.182.254;
+    return 301 https://$host$request_uri;
+}
+
+# Основной HTTPS-сервер
+server {
+    listen 443 ssl http2;
+    server_name foodgram-practicum.hopto.org 89.169.182.254;
+
+    ssl_certificate     /etc/letsencrypt/live/foodgram-practicum.hopto.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/foodgram-practicum.hopto.org/privkey.pem;
+
+    add_header Strict-Transport-Security "max-age=31536000" always;
 
     server_tokens off;
     client_max_body_size 20M;
 
-    location /media/ {
-        root /var/html;
-    }
+    # healthcheck
+    location = /nginx-health { return 200 'ok'; add_header Content-Type text/plain; }
 
-    location /static/ {
-        root /var/html;
-    }
+    # ---- СТАТИКА ----
+    # Фронтовые ассеты (React build) лежат в /usr/share/nginx/html/static
+    location /static/ { root /usr/share/nginx/html; }
 
+    # Бэкенд-админка/DRF-статик лежит в volume /var/html/static
+    location ^~ /static/admin/          { alias /var/html/static/admin/; }
+    location ^~ /static/rest_framework/ { alias /var/html/static/rest_framework/; }
+    location ^~ /static/rangefilter/    { alias /var/html/static/rangefilter/; }
+
+    # Медиа
+    location /media/ { alias /var/html/media/; }
+
+    # Админка
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
-
+    # API
     location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme; 
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api/;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
     }
 
+    # SPA (фронт)
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri /index.html;
     }
 
