--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
   db_data:
   static_volume:
   media_volume:
-  frontend_volume:
+  front_build:
 
 services:
   db:
@@ -44,9 +44,9 @@ services:
     image: pyryanova/foodgram_frontend
     platform: linux/amd64
     volumes:
-      - frontend_volume:/usr/share/nginx/html
+      - front_build:/dist
     command: >
-      sh -lc "cp -r /opt/build/. /usr/share/nginx/html && tail -f /dev/null"
+      sh -c "npm ci && npm run build && cp -r /app/build/* /dist"
     networks:
       - foodgram_network
     container_name: foodgram_frontend
@@ -59,11 +59,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx:/etc/nginx/conf.d:ro
+      - front_build:/usr/share/nginx/html
+      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt
-      - static_volume:/app/static
-      - media_volume:/app/media
-      - frontend_volume:/usr/share/nginx/html
+      - static_volume:/var/html/static
+      - media_volume:/var/html/media
     depends_on:
       - backend
       - frontend
