--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - ./.env
     depends_on:
       - db
+    ports:
+      - "8000:8000"
     networks:
       - foodgram_network
     container_name: foodgram_backend
