--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -20,20 +20,18 @@ server {
     location = /nginx-health { return 200 'ok'; add_header Content-Type text/plain; }
 
     # ---- СТАТИКА ----
-    # Бэкенд-статик (админка/DRF) теперь из volume, примонтированного в /static
-    location ^~ /static/admin/          { alias /static/admin/; }
-    location ^~ /static/rest_framework/ { alias /static/rest_framework/; }
-    location ^~ /static/rangefilter/    { alias /static/rangefilter/; }
-
-    # Фронтовые ассеты React (build) лежат в /usr/share/nginx/html
-    # Оставляем общий /static/ для фронта, более специфичные пути выше перекроют его
+    # Фронтовые ассеты (React build) лежат в /usr/share/nginx/html/static
     location /static/ { root /usr/share/nginx/html; }
 
-    # ---- МЕДИА ----
-    # Медиа-файлы бэкенда из volume, примонтированного в /media
-    location /media/ { alias /media/; }
+    # Бэкенд-админка/DRF-статик лежит в volume /var/html/static
+    location ^~ /static/admin/          { alias /var/html/static/admin/; }
+    location ^~ /static/rest_framework/ { alias /var/html/static/rest_framework/; }
+    location ^~ /static/rangefilter/    { alias /var/html/static/rangefilter/; }
 
-    # ---- АДМИНКА ----
+    # Медиа
+    location /media/ { alias /var/html/media/; }
+
+    # Админка
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
         proxy_set_header Host              $host;
@@ -42,7 +40,7 @@ server {
         proxy_set_header X-Forwarded-Proto https;
     }
 
-    # ---- API ----
+    # API
     location /api/ {
         proxy_pass http://backend:8000/api/;
         proxy_set_header Host              $host;
@@ -51,7 +49,7 @@ server {
         proxy_set_header X-Forwarded-Proto https;
     }
 
-    # ---- SPA (фронт) ----
+    # SPA (фронт)
     location / {
         root /usr/share/nginx/html;
         try_files $uri /index.html;
